--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -17,6 +17,7 @@
 
         <ImageView
             android:id="@+id/activity_main_image_of_the_day"
+            android:contentDescription="@string/image_displays_whether_hazardous_or_not"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -48,6 +49,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/close_approach_data_title"
+                        android:contentDescription="@string/close_approach_data_title"
                         android:textColor="@color/default_text_color" />
 
                     <TextView
@@ -77,6 +79,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/absolute_magnitude_title"
+                            android:contentDescription="@string/absolute_magnitude_title"
                             android:textColor="@color/default_text_color" />
 
                         <TextView
@@ -91,6 +94,7 @@
 
                     <ImageView
                         android:id="@+id/help_button"
+                        android:contentDescription="@string/help_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
@@ -103,6 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/estimated_diameter_title"
+                    android:contentDescription="@string/estimated_diameter_title"
                     android:textColor="@color/default_text_color" />
 
                 <TextView
@@ -119,6 +124,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/relative_velocity_title"
+                    android:contentDescription="@string/relative_velocity_title"
                     android:textColor="@color/default_text_color" />
 
                 <TextView
@@ -135,6 +141,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/distance_from_earth_title"
+                    android:contentDescription="@string/distance_from_earth_title"
                     android:textColor="@color/default_text_color" />
 
                 <TextView
